syntax = "proto3";

package wilson.api.manager.dictionary.v1;

option go_package = "manager/dictionary/v1;v1";

import "manager/dictionary/v1/manager_dictionary.proto";
import "google/api/annotations.proto";
import "manager/dictionary/v1/manager_dictionary_value.proto";

service Dictionary{

  // ListDictionary
  rpc ListDictionary (ListDictionaryRequest) returns (ListDictionaryReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/dictionaries",
    };
  }

  // CreateDictionary
  rpc CreateDictionary (CreateDictionaryRequest) returns (CreateDictionaryReply) {
    option (google.api.http) = {
      post: "/manager/api/v1/dictionary",
      body: "*"
    };
  }

  // UpdateDictionary
  rpc UpdateDictionary (UpdateDictionaryRequest) returns (UpdateDictionaryReply) {
    option (google.api.http) = {
      put: "/manager/api/v1/dictionary",
      body: "*"
    };
  }

  // DeleteDictionary
  rpc DeleteDictionary (DeleteDictionaryRequest) returns (DeleteDictionaryReply) {
    option (google.api.http) = {
      delete: "/manager/api/v1/dictionary",
    };
  }

  // GetDictionaryValues
  rpc GetDictionaryValues (GetDictionaryValuesRequest) returns (GetDictionaryValuesReply) {
    option (google.api.http) = {
      post: "/manager/api/v1/dictionary/values",
      body: "*",
      additional_bindings:{
        post: "/manager/client/v1/dictionary/values",
        body: "*",
      }
    };
  }

  // ListDictionaryValue
  rpc ListDictionaryValue (ListDictionaryValueRequest) returns (ListDictionaryValueReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/dictionary_values",
    };
  }

  // CreateDictionaryValue
  rpc CreateDictionaryValue (CreateDictionaryValueRequest) returns (CreateDictionaryValueReply) {
    option (google.api.http) = {
      post: "/manager/api/v1/dictionary_value",
      body: "*"
    };
  }

  // UpdateDictionaryValue
  rpc UpdateDictionaryValue (UpdateDictionaryValueRequest) returns (UpdateDictionaryValueReply) {
    option (google.api.http) = {
      put: "/manager/api/v1/dictionary_value",
      body: "*"
    };
  }

  // UpdateDictionaryValueStatus
  rpc UpdateDictionaryValueStatus (UpdateDictionaryValueStatusRequest) returns (UpdateDictionaryValueStatusReply) {
    option (google.api.http) = {
      put: "/manager/api/v1/dictionary_value/status",
      body: "*"
    };
  }

  // DeleteDictionaryValue
  rpc DeleteDictionaryValue (DeleteDictionaryValueRequest) returns (DeleteDictionaryValueReply) {
    option (google.api.http) = {
      delete: "/manager/api/v1/dictionary_value",
    };
  }

  // GetDictionary
  rpc GetDictionary (GetDictionaryRequest) returns (GetDictionaryReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/dictionary",
    };
  }

}